[gd_scene load_steps=19 format=3 uid="uid://crma7psgxv3p0"]

[ext_resource type="Texture2D" uid="uid://b6ywd6ncuwjv" path="res://assets/images/popup-container.png" id="2_xrfcs"]
[ext_resource type="Script" uid="uid://cufr1s1iwy0sx" path="res://scripts/novel_select/novel_option.gd" id="3_noean"]
[ext_resource type="FontFile" uid="uid://ykf1mhpohd8q" path="res://assets/fonts/Lovelo Black.otf" id="3_vjrcr"]
[ext_resource type="Texture2D" uid="uid://cpf28bkphppjp" path="res://assets/images/Noli_button.png" id="3_y2b1x"]
[ext_resource type="Theme" uid="uid://cb3r3oyw7hxa0" path="res://theme/label_theme.tres" id="4_vjrcr"]
[ext_resource type="FontFile" uid="uid://b44m80u2kmjq8" path="res://assets/fonts/EFCO Brookshire Regular.ttf" id="5_fckuu"]
[ext_resource type="Texture2D" uid="uid://w4l0fe5bl263" path="res://assets/images/lock.png" id="6_rvlnn"]
[ext_resource type="Texture2D" uid="uid://dyy1ciyrp7bhd" path="res://assets/images/Elfili_button.png" id="6_xrfcs"]
[ext_resource type="Theme" uid="uid://ctg5ru4kl6ydx" path="res://theme/button_theme.tres" id="9_3fokn"]
[ext_resource type="Script" uid="uid://b4lbsjcsfji5a" path="res://scenes/ui/novel_select/scroll_container.gd" id="10_xrfcs"]
[ext_resource type="PackedScene" uid="uid://lhs2uwuvbk1g" path="res://scenes/ui/novel_select/play_icon_button.tscn" id="10_y2b1x"]
[ext_resource type="Texture2D" uid="uid://cwb1qr3n8xpdx" path="res://assets/images/gold-trophy.png" id="12_xrfcs"]

[sub_resource type="Animation" id="Animation_xrfcs"]
resource_name = "RESET"

[sub_resource type="Animation" id="Animation_m0y2x"]
resource_name = "dissolve"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7053g"]
_data = {
&"RESET": SubResource("Animation_xrfcs"),
&"dissolve": SubResource("Animation_m0y2x")
}

[sub_resource type="Animation" id="Animation_3fokn"]
resource_name = "RESET"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2b1x"]
_data = {
&"RESET": SubResource("Animation_3fokn")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fokn"]
bg_color = Color(1, 0.992157, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="NovelOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_noean")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.0
offset_top = -263.5
offset_right = 293.0
offset_bottom = 263.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xrfcs")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -296.5
offset_bottom = 259.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 30

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="Tabs" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Spacer" type="Control" parent="TextureRect/MarginContainer/HBoxContainer/Tabs"]
custom_minimum_size = Vector2(130, 300)
layout_mode = 2

[node name="Noli" type="TextureButton" parent="TextureRect/MarginContainer/HBoxContainer/Tabs"]
custom_minimum_size = Vector2(80, 90)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_y2b1x")
texture_pressed = ExtResource("3_y2b1x")
texture_hover = ExtResource("3_y2b1x")
texture_disabled = ExtResource("3_y2b1x")
texture_focused = ExtResource("3_y2b1x")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/MarginContainer/HBoxContainer/Tabs/Noli"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -20.0
offset_right = 22.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vjrcr")
theme_override_font_sizes/font_size = 20
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect/MarginContainer/HBoxContainer/Tabs/Noli"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -37.5
offset_right = 13.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_rvlnn")
expand_mode = 1

[node name="Elfili" type="TextureButton" parent="TextureRect/MarginContainer/HBoxContainer/Tabs"]
custom_minimum_size = Vector2(80, 90)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_xrfcs")
texture_pressed = ExtResource("6_xrfcs")
texture_hover = ExtResource("6_xrfcs")
texture_disabled = ExtResource("6_xrfcs")
texture_focused = ExtResource("6_xrfcs")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/MarginContainer/HBoxContainer/Tabs/Elfili"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -54.0
offset_right = 66.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_vjrcr")
theme_override_font_sizes/font_size = 20
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect/MarginContainer/HBoxContainer/Tabs/Elfili"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -42.5
offset_right = 15.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_rvlnn")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="NovelTitleLabel" type="Label" parent="TextureRect/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_vjrcr")
theme_override_colors/font_color = Color(0.407843, 0.258824, 0.0627451, 1)
theme_override_fonts/font = ExtResource("5_fckuu")
text = "Noli me tangere"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 56

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("9_3fokn")
theme_type_variation = &"chapter"
script = ExtResource("10_xrfcs")

[node name="ChaptersContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="TextureRect/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/ScrollContainer/ChaptersContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/ScrollContainer/ChaptersContainer"]
libraries = {
&"": SubResource("AnimationLibrary_7053g")
}

[node name="StudentProgress" type="HTTPRequest" parent="TextureRect/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/ScrollContainer/ChaptersContainer"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/ScrollContainer"]
libraries = {
&"": SubResource("AnimationLibrary_y2b1x")
}

[node name="Control" type="Control" parent="TextureRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="PlayIconButton" parent="TextureRect" instance=ExtResource("10_y2b1x")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -78.5
offset_right = 14.0
offset_bottom = 21.5
grow_horizontal = 0
grow_vertical = 0

[node name="PanelContainer2" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
offset_left = 31.0
offset_top = 27.0
offset_right = 181.0
offset_bottom = 77.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3fokn")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="Spacer" type="Control" parent="PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("12_xrfcs")
expand_mode = 1

[node name="Points" type="Label" parent="PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("4_vjrcr")
theme_type_variation = &"black"
theme_override_font_sizes/font_size = 30
text = "10000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="GETChapterResources" type="HTTPRequest" parent="."]

[connection signal="button_down" from="TextureRect/MarginContainer/HBoxContainer/Tabs/Noli" to="." method="_on_noli_button_down"]
[connection signal="mouse_entered" from="TextureRect/MarginContainer/HBoxContainer/Tabs/Noli" to="." method="_on_noli_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/MarginContainer/HBoxContainer/Tabs/Noli" to="." method="_on_noli_mouse_exited"]
[connection signal="button_down" from="TextureRect/MarginContainer/HBoxContainer/Tabs/Elfili" to="." method="_on_elfili_button_down"]
[connection signal="mouse_entered" from="TextureRect/MarginContainer/HBoxContainer/Tabs/Elfili" to="." method="_on_elfili_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/MarginContainer/HBoxContainer/Tabs/Elfili" to="." method="_on_elfili_mouse_exited"]
[connection signal="request_completed" from="TextureRect/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/ScrollContainer/ChaptersContainer/StudentProgress" to="." method="_on_student_progress_request_completed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="request_completed" from="GETChapterResources" to="." method="_on_get_chapter_resources_request_completed"]
